# Movie-Rating-system

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: ebd5b180bc35_create_initial_tables.py
app/: main.py
app/controller/: movies.py
app/core/: config.py  decorators.py  logging_config.py
app/db/: base.py  session.py
app/exceptions/: app_exceptions.py  handlers.py
app/models/: __init__.py  director.py  genre.py  genre_movie.py  movie.py  movie_rating.py
app/repositories/: movies.py
app/schemas/: movies.py
app/services/: movies.py
scripts/: seed_check.py  seeddb.sql
